just stuff ignore this

--- a/ignore for now just unused code saved for later.html
+++ b/ignore for now just unused code saved for later.html
@@ -1,75 +1,43 @@
 ignore for now just unused code saved for later
 
-<div class="inputDiv">
 			 		Gaming Username: <br>
 			  		<input type="text" name="username" placeholder="JohnDoe072"><br>
-			  	</div>
-			  	<div class="inputDiv">
 				  	Prefered name: <br>
 				  	<input type="text" name="preferedname" placeholder="Johnny"><br>
-				</div>
-				<div class="inputDiv">
 			  		Timezone: <br>
-				<select name="timezone">
-				<option value="-12" >(GMT -12:00) </option>
-				        <option value="-11" >(GMT -11:00) </option>
-				        <option value="-10" >(GMT -10:00) </option>
-				        <option value="-9"  >(GMT -9:00) </option>
-				        <option value="-8"  >(GMT -8:00) </option>
-				        <option value="-7"  >(GMT -7:00) </option>
-				        <option value="-6"  >(GMT -6:00) </option>
-				        <option value="-5"  >(GMT -5:00) </option>
-				        <option value="-4"  >(GMT -4:00) </option>
-				        <option value="-3"  >(GMT -3:00) </option>
-				        <option value="-2"  >(GMT -2:00) </option>
-				        <option value="-1"  >(GMT -1:00 hour) </option>
-				        <option value="0"  selected="selected">(GMT)</option>
-				        <option value="1"   >(GMT +1:00 hour) </option>
-				        <option value="2"   >(GMT +2:00) </option>
-				        <option value="3"   >(GMT +3:00) </option>
-				        <option value="4"   >(GMT +4:00) </option>
-				        <option value="5"   >(GMT +5:00) </option>
-				        <option value="6"   >(GMT +6:00) </option>
-				        <option value="7"   >(GMT +7:00) </option>
-				        <option value="8"   >(GMT +8:00) </option>
-				        <option value="9"   >(GMT +9:00) </option>
-				        <option value="10"  >(GMT +10:00) </option>
-				        <option value="11"  >(GMT +11:00) </option>
-				        <option value="12"  >(GMT +12:00) </option>
-				</select>
-				<br></div>
-				<div class="inputDiv">
+					<select name="timezone">
+					<option value="-12" >(GMT -12:00) </option>
+					        <option value="-11" >(GMT -11:00) </option>
+					        <option value="-10" >(GMT -10:00) </option>
+					        <option value="-9"  >(GMT -9:00) </option>
+					        <option value="-8"  >(GMT -8:00) </option>
+					        <option value="-7"  >(GMT -7:00) </option>
+					        <option value="-6"  >(GMT -6:00) </option>
+					        <option value="-5"  >(GMT -5:00) </option>
+					        <option value="-4"  >(GMT -4:00) </option>
+					        <option value="-3"  >(GMT -3:00) </option>
+					        <option value="-2"  >(GMT -2:00) </option>
+					        <option value="-1"  >(GMT -1:00 hour) </option>
+					        <option value="0"  selected="selected">(GMT)</option>
+					        <option value="1"   >(GMT +1:00 hour) </option>
+					        <option value="2"   >(GMT +2:00) </option>
+					        <option value="3"   >(GMT +3:00) </option>
+					        <option value="4"   >(GMT +4:00) </option>
+					        <option value="5"   >(GMT +5:00) </option>
+					        <option value="6"   >(GMT +6:00) </option>
+					        <option value="7"   >(GMT +7:00) </option>
+					        <option value="8"   >(GMT +8:00) </option>
+					        <option value="9"   >(GMT +9:00) </option>
+					        <option value="10"  >(GMT +10:00) </option>
+					        <option value="11"  >(GMT +11:00) </option>
+					        <option value="12"  >(GMT +12:00) </option>
+					</select><br>
 				  Time and Day availability: <br>
 				  	<textarea name="timeandday" rows="3" maxlength="200" cols="60" placeholder="Unavailable on weekends, available on weekday evenings"></textarea><br>
-				</div>
-				<div class="inputDiv">
 				  Age: <br>
 					<input type="number" min="13" max="99"><br>	
-				</div>
-				<div class="inputDiv">
 				  Gaming Platform: <br>
 					<input type="radio" name="platform" value="PS4" checked> PS4<br>
 					<input type="radio" name="platform" value="Xbox One"> Xbox One<br>
 					<input type="radio" name="platform" value="PC"> PC<br>
-				</div>
-				<div class="inputDiv">
 					<input type="submit" onclick="clicked();" value="Create Profile"> 
-				</div>
-
-
-
-
-
-
-
-/*#divAroundFormThing {
-	padding: 25px;
-}
-
-.inputDiv {
-	padding: 5px;
-}
-
-.checkboxDiv {
-	padding: 5px;
-}*/
