--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>GamerPals App</title>
 	<!-- Boostrap --><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
 	<!--  Google text font -->
-	<link href='//fonts.googleapis.com/css?family=Delius' rel='stylesheet'>
+<link href='//fonts.googleapis.com/css?family=Assistant' rel='stylesheet'>
 
 	<!--  My CSS --><link rel="stylesheet" type="text/css" href="style.css">
 </head>
