--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 </head>
 <body>
 	<div class='container'>
-		<div class='row'>
-			<div id="controllerDiv">
-				<div class='col-sm-2 hidden-sm hidden-xs'>
-					<img class="controllerImages img-responsive" id="xbox" src="images/controllerxbox.png">
-				</div>
-				<div id="header" class="col-md-8 col-sm-12">
-					<h2 id="headerText">GamerPals</h2><br>
-				</div>
-				<div class='col-sm-2 hidden-sm hidden-xs'>
-					<img class="controllerImages img-responsive" id="ps4" src="images/controllerps4.png">
-				</div>
+		<div class='row headerDiv'>
+			<div class='col-md-4 hidden-sm hidden-xs'>
+				<img class="controllerImages img-responsive" id="xbox" src="images/1controllerxbox.png">
+			</div>
+			<div id="header" class="col-md-4 col-sm-12">
+				<h2 id="headerText">GamerPals</h2><br>
+			</div>
+			<div class='col-md-4 hidden-sm hidden-xs'>
+				<img class="controllerImages img-responsive" id="ps4" src="images/1controllerps4.png">
 			</div>
 		</div>
 		<div class='row'>
@@ -40,7 +38,7 @@
 						  	<input type="text" name="email" class="textInputs" placeholder="E-mail">
 						  	<input type="password" name="password" class="textInputs" placeholder="Password">
 						  	<input type="password" name="password" class="textInputs" placeholder="Confirm Password">
-							<button class="submitButton btn btn-lg btn-success btn-block" onclick="createProfile()">Create Profile</button>
+							<button class="submitButton btn btn-lg btn-warning btn-block" onclick="createProfile()">Create Profile</button>
 						</form>
 					</div>
 				</div>
